deploy/k8s/blue-green/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluecollar
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
